delete、update 采坑 md待整理

--- a/app/src/main/res/layout/activity_eg.xml
+++ b/app/src/main/res/layout/activity_eg.xml
@@ -6,4 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".ui.EgActivity">
 
+    <androidx.appcompat.widget.AppCompatButton
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/adduser1"
+        android:textAllCaps="false"
+        android:text="addUser1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        app:layout_constraintTop_toBottomOf="@id/adduser1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/adduser2"
+        android:textAllCaps="false"
+        android:text="addUser2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        app:layout_constraintTop_toBottomOf="@id/adduser2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/deleteUser1"
+        android:textAllCaps="false"
+        android:text="deleteUser1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        app:layout_constraintTop_toBottomOf="@id/deleteUser1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/updateUser1"
+        android:textAllCaps="false"
+        android:text="updateUser1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        app:layout_constraintTop_toBottomOf="@id/updateUser1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/queryAll"
+        android:textAllCaps="false"
+        android:text="queryAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        app:layout_constraintTop_toBottomOf="@id/queryAll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/dbInfo"
+        android:textAllCaps="false"
+        android:text="dbInfo:null"
+        android:layout_width="match_parent"
+        android:layout_height="400dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
